# hometask2_8_2

./: consumer.py  model.py  producer.py  pyproject.toml  seed.py
