[tool.poetry]
name = "hometast2-8-2"
version = "0.1.0"
description = ""
authors = ["Mephod1y <mephodiy@i.ua>"]
readme = "README.md"
packages = [{include = "hometast2_8_2"}]

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.1"
faker = "^18.3.1"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
